--- a/layout/article.html
+++ b/layout/article.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221215144505">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221215144505">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221215144505">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230121150135">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20230121150135">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230121150135">
 
 
 </head>
@@ -121,6 +121,11 @@
                                     Отзывы
                                 </a>
                             </li>
+                            <li class="submenu__item">
+                                <a href="/media.html" class="submenu__link">
+                                    Медиагалерея
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </li>
@@ -154,7 +159,7 @@
 				</div>
 				<canvas id="gradient-canvas" data-transition-in></canvas>
 			</div>
-			<div class="page__article article" >
+			<div class="page__article article">
 				<div class="article__container">
 					<div class="article__body">
 						<figure class="article__image">
@@ -176,28 +181,60 @@
 									объектов, сил и энергии! С Днем строителя, успехов и позитива!
 								</strong>
 								<p>
-									Мы уверены, что этот день можно по праву считать нашим общим праздником, ведь благодаря
+									Мы уверены, что этот день можно по праву считать нашим общим праздником, ведь
+									благодаря
 									сотрудничеству и здоровой конкуренции растут и развиваются наши с вами проекты.
 								</p>
 								<p>
-									Мы рады, что с нашей помощью строительство объектов энергетического комплекса движется
-									эффективнее и быстрее. Хотим заверить, что в наше непростое время мы и дальше будем идти
+									Мы рады, что с нашей помощью строительство объектов энергетического комплекса
+									движется
+									эффективнее и быстрее. Хотим заверить, что в наше непростое время мы и дальше будем
+									идти
 									рука об руку, предоставляя вам самые качественные материалы в кратчайшие сроки и на
 									лучших
 									условиях.
 								</p>
+							</div>
+
+							<div class="article__slider swiper-container article-slider" data-animation>
+
+								<div class="swiper-wrapper article-slider__wrapper">
+
+									<a href="img/news/slider/01.jpg" data-fslightbox
+										class="swiper-slide article-slider__item">
+										<picture><source srcset="img/news/slider/01.webp"type="image/webp"><img src="img/news/slider/01.jpg" class="cover-image" alt="PSK"></picture>
+									</a>
+									<a href="img/news/slider/02.jpg" data-fslightbox
+										class="swiper-slide article-slider__item">
+										<picture><source srcset="img/news/slider/02.webp"type="image/webp"><img src="img/news/slider/02.jpg" class="cover-image" alt="PSK"></picture>
+									</a>
+									<a href="img/news/slider/03.jpg" data-fslightbox
+										class="swiper-slide article-slider__item">
+										<picture><source srcset="img/news/slider/03.webp"type="image/webp"><img src="img/news/slider/03.jpg" class="cover-image" alt="PSK"></picture>
+									</a>
+								</div>
+								<button type="button" class="article-slider__prev swiper-button-prev"></button>
+								<button type="button" class="article-slider__next swiper-button-next"></button>
+								<div class="article-slider__pagination swiper-pagination"></div>
+							</div>
+							<div class="article__video">
+								<picture><source srcset="img/news/slider/01.webp"type="image/webp"><img src="img/news/slider/01.jpg" class="cover-image" alt="PSK"></picture>
+								<button type="button" data-modal="modal" data-video data-video-code-rus="C0E1oD1BhTY" class="article__video-btn icon-play-alternate"></button>
 							</div>
 							<div>
 								<h2>
 									Партнеры
 								</h2>
 								<p>
-									Мы уверены, что этот день можно по праву считать нашим общим праздником, ведь благодаря
+									Мы уверены, что этот день можно по праву считать нашим общим праздником, ведь
+									благодаря
 									сотрудничеству и здоровой конкуренции растут и развиваются наши с вами проекты.
 								</p>
 								<p>
-									Мы рады, что с нашей помощью строительство объектов энергетического комплекса движется
-									эффективнее и быстрее. Хотим заверить, что в наше непростое время мы и дальше будем идти
+									Мы рады, что с нашей помощью строительство объектов энергетического комплекса
+									движется
+									эффективнее и быстрее. Хотим заверить, что в наше непростое время мы и дальше будем
+									идти
 									рука об руку, предоставляя вам самые качественные материалы в кратчайшие сроки и на
 									лучших условиях.
 								</p>
@@ -210,13 +247,16 @@
 							<div>
 								<p>
 									<mark>
-										Компания НИЛЕД, по объему выпускаемой линейной арматуры, занимает лидирующее место в
+										Компания НИЛЕД, по объему выпускаемой линейной арматуры, занимает лидирующее
+										место в
 										РФ.
-										Производство оснащено новым высокотехнологичным автоматизированным оборудованием.
+										Производство оснащено новым высокотехнологичным автоматизированным
+										оборудованием.
 										НИЛЕД
 										осуществляет производство и сборку изделий из европейских и отечественных
 										комплектующих
-										на базе собственного производственно-складского комплекса. Долгосрочная стратегия
+										на базе собственного производственно-складского комплекса. Долгосрочная
+										стратегия
 										развития компании НИЛЕД предполагает расширение ассортимента изделий.
 									</mark>
 								</p>
@@ -226,12 +266,15 @@
 									Коллеги
 								</h2>
 								<p>
-									Мы уверены, что этот день можно по праву считать нашим общим праздником, ведь благодаря
+									Мы уверены, что этот день можно по праву считать нашим общим праздником, ведь
+									благодаря
 									сотрудничеству и здоровой конкуренции растут и развиваются наши с вами проекты.
 								</p>
 								<p>
-									Мы рады, что с нашей помощью строительство объектов энергетического комплекса движется
-									эффективнее и быстрее. Хотим заверить, что в наше непростое время мы и дальше будем идти
+									Мы рады, что с нашей помощью строительство объектов энергетического комплекса
+									движется
+									эффективнее и быстрее. Хотим заверить, что в наше непростое время мы и дальше будем
+									идти
 									рука об руку, предоставляя вам самые качественные материалы в кратчайшие сроки и на
 									лучших условиях.
 								</p>
@@ -491,16 +534,26 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221215144505"></script>
+	<div id="modal" class="popup">
+    <div class="popup__content">
+        <button type="button" class="popup__close icon-close"></button>
+        <div class="popup__body">
+            <div id="js-youtube-video"></div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221215144505"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221215144505"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221215144505"></script>
-<script src="js/app.min.js?_v=20221215144505"></script>
+            
+        </div>
+    </div>
+</div>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230121150135"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20230121150135"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20230121150135"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20230121150135"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20230121150135"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20230121150135"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20230121150135"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20230121150135"></script>
+<script src="js/app.min.js?_v=20230121150135"></script>
 
 </body>
 
