--- a/layout/contacts.html
+++ b/layout/contacts.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221215144505">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221215144505">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221215144505">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230121162916">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20230121162916">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230121162916">
 
 
 </head>
@@ -121,6 +121,11 @@
                                     Отзывы
                                 </a>
                             </li>
+                            <li class="submenu__item">
+                                <a href="/media.html" class="submenu__link">
+                                    Медиагалерея
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </li>
@@ -190,10 +195,235 @@
 					<div class="contacts__map" id="map"></div>
 				</div>
 			</div>
+			<section class="page__logistics logistics">
+				<div class="logistics__container">
+					<h2 class="logistics__title title-xxl" data-animation>
+						Логистическая сеть
+					</h2>
+					<div class="logistics__items">
+						<div id="logistic-1" class="logistics__item" data-animation>
+							<picture><source srcset="img/logistic-01.webp"type="image/webp"><img src="img/logistic-01.png" hidden class="logistics__item-image hidden" alt="hidden img"></picture>
+							<div class="logistics__item-title">
+								Логистический центр
+							</div>
+							<div class="logistics__item-place">
+								г. Казань
+							</div>
+							<ul class="logistics__item-list">
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Адрес:
+									</div>
+									<div class="logistics__item-content">
+										Татарстан, Лаишевский р-н,
+										с.&nbsp;Столбище, ул. Северная д.14
+									</div>
+								</li>
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Время работы:
+									</div>
+									<div class="logistics__item-content">
+										<p>
+											пн-пт 09:00-20:00
+										</p>
+										<p>
+											сб 10:00-16:30
+										</p>
+									</div>
+								</li>
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Телефон:
+									</div>
+									<div class="logistics__item-content">
+										<a href="tel:88432333923">
+											8 (843) 233-39-23
+										</a>
+									</div>
+								</li>
+							</ul>
+						</div>
+						<div id="logistic-2" class="logistics__item" data-animation>
+							<picture><source srcset="img/logistic-01.webp"type="image/webp"><img src="img/logistic-01.png" hidden class="logistics__item-image hidden" alt="hidden img"></picture>
+							<div class="logistics__item-title">
+								Распределительный склад
+							</div>
+							<div class="logistics__item-place">
+								г. Набережные Челны
+							</div>
+							<ul class="logistics__item-list">
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Адрес:
+									</div>
+									<div class="logistics__item-content">
+										Татарстан, Лаишевский р-н,
+										с.&nbsp;Столбище, ул. Северная д.14
+									</div>
+								</li>
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Время работы:
+									</div>
+									<div class="logistics__item-content">
+										<p>
+											пн-пт 09:00-20:00
+										</p>
+										<p>
+											сб 10:00-16:30
+										</p>
+									</div>
+								</li>
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Телефон:
+									</div>
+									<div class="logistics__item-content">
+										<a href="tel:88432333923">
+											8 (843) 233-39-23
+										</a>
+									</div>
+								</li>
+							</ul>
+						</div>
+						<div id="logistic-3" class="logistics__item" data-animation>
+							<picture><source srcset="img/logistic-01.webp"type="image/webp"><img src="img/logistic-01.png" hidden class="logistics__item-image hidden" alt="hidden img"></picture>
+							<div class="logistics__item-title">
+								Распределительный склад
+							</div>
+							<div class="logistics__item-place">
+								г. Буинск
+							</div>
+							<ul class="logistics__item-list">
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Адрес:
+									</div>
+									<div class="logistics__item-content">
+										Татарстан, Лаишевский р-н,
+										с.&nbsp;Столбище, ул. Северная д.14
+									</div>
+								</li>
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Время работы:
+									</div>
+									<div class="logistics__item-content">
+										<p>
+											пн-пт 09:00-20:00
+										</p>
+										<p>
+											сб 10:00-16:30
+										</p>
+									</div>
+								</li>
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Телефон:
+									</div>
+									<div class="logistics__item-content">
+										<a href="tel:88432333923">
+											8 (843) 233-39-23
+										</a>
+									</div>
+								</li>
+							</ul>
+						</div>
+						<div id="logistic-4" class="logistics__item" data-animation>
+							<picture><source srcset="img/logistic-01.webp"type="image/webp"><img src="img/logistic-01.png" hidden class="logistics__item-image hidden" alt="hidden img"></picture>
+							<div class="logistics__item-title">
+								Распределительный склад
+							</div>
+							<div class="logistics__item-place">
+								г. Чистополь
+							</div>
+							<ul class="logistics__item-list">
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Адрес:
+									</div>
+									<div class="logistics__item-content">
+										Татарстан, Лаишевский р-н,
+										с.&nbsp;Столбище, ул. Северная д.14
+									</div>
+								</li>
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Время работы:
+									</div>
+									<div class="logistics__item-content">
+										<p>
+											пн-пт 09:00-20:00
+										</p>
+										<p>
+											сб 10:00-16:30
+										</p>
+									</div>
+								</li>
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Телефон:
+									</div>
+									<div class="logistics__item-content">
+										<a href="tel:88432333923">
+											8 (843) 233-39-23
+										</a>
+									</div>
+								</li>
+							</ul>
+						</div>
+						<div id="logistic-5" class="logistics__item" data-animation>
+							<picture><source srcset="img/logistic-01.webp"type="image/webp"><img src="img/logistic-01.png" hidden class="logistics__item-image hidden" alt="hidden img"></picture>
+							<div class="logistics__item-title">
+								Распределительный склад
+							</div>
+							<div class="logistics__item-place">
+								г. Бугульма
+							</div>
+							<ul class="logistics__item-list">
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Адрес:
+									</div>
+									<div class="logistics__item-content">
+										Татарстан, Лаишевский р-н,
+										с.&nbsp;Столбище, ул. Северная д.14
+									</div>
+								</li>
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Время работы:
+									</div>
+									<div class="logistics__item-content">
+										<p>
+											пн-пт 09:00-20:00
+										</p>
+										<p>
+											сб 10:00-16:30
+										</p>
+									</div>
+								</li>
+								<li class="logistics__item-block">
+									<div class="logistics__item-caption">
+										Телефон:
+									</div>
+									<div class="logistics__item-content">
+										<a href="tel:88432333923">
+											8 (843) 233-39-23
+										</a>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="logistics__map" id="logistics-map" data-animation></div>
+				</div>
+			</section>
 			<section class="page__feedback feedback" data-animation>
 				<div class="feedback__container">
 					<div class="feedback__content">
-						
+
 						<form action="#" class="feedback__form form">
 							<h2 class="feedback__title title-xl">
 								Написать нам
@@ -201,8 +431,10 @@
 							<div class="form__rows">
 								<div class="form__row">
 									<input type="text" name="name" data-required class="form__input" placeholder="Имя">
-									<input type="tel" name="phone" data-required class="form__input" placeholder="Телефон">
-									<input type="email" name="email" data-required class="form__input" placeholder="Email">
+									<input type="tel" name="phone" data-required class="form__input"
+										placeholder="Телефон">
+									<input type="email" name="email" data-required class="form__input"
+										placeholder="Email">
 								</div>
 								<div class="form__row">
 									<textarea name="message" class="form__textarea" placeholder="Сообщение"></textarea>
@@ -210,7 +442,8 @@
 							</div>
 							<div class="form__footer">
 								<label class="form__checkbox">
-									<input type="checkbox" name="privacy" checked data-required class="form__checkbox-input hidden">
+									<input type="checkbox" name="privacy" checked data-required
+										class="form__checkbox-input hidden">
 									<span class="form__checkbox-content">
 										Нажимая на кнопку, вы даете согласие на обработку своих персональных данных
 									</span>
@@ -393,16 +626,16 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221215144505"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230121162916"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20230121162916"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221215144505"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221215144505"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221215144505"></script>
-<script src="js/app.min.js?_v=20221215144505"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20230121162916"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20230121162916"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20230121162916"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20230121162916"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20230121162916"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20230121162916"></script>
+<script src="js/app.min.js?_v=20230121162916"></script>
 
 </body>
 
