--- a/layout/index.html
+++ b/layout/index.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221223131339">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221223131339">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221223131339">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230120201957">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20230120201957">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230120201957">
 
 
 </head>
@@ -119,6 +119,11 @@
                             <li class="submenu__item">
                                 <a href="/reviews.html" class="submenu__link">
                                     Отзывы
+                                </a>
+                            </li>
+                            <li class="submenu__item">
+                                <a href="/media.html" class="submenu__link">
+                                    Медиагалерея
                                 </a>
                             </li>
                         </ul>
@@ -248,7 +253,6 @@
         </div>
     </div>
 </section>
-			
 			<section class="page__projects projects">
 				<div class="projects__container">
 					<div class="projects__header" data-animation>
@@ -700,33 +704,21 @@
         <button type="button" class="popup__close icon-close"></button>
         <div class="popup__body">
             <div id="js-youtube-video"></div>
-            <div class="popup__switcher video__switcher">
-                <ul class="video__switcher-list">
-                    <li class="video__switcher-item">
-                        <a href="C0E1oD1BhTY" data-lang="ru" class="video__switcher-btn">
-                            Руc
-                        </a>
-                    </li>
-                    <li class="video__switcher-item">
-                        <a href="m_Dr1wyVwGI" data-lang="en" class="video__switcher-btn">
-                            Eng
-                        </a>
-                    </li>
-                </ul>
-            </div>
+
+            
         </div>
     </div>
 </div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221223131339"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221223131339"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230120201957"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20230120201957"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221223131339"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221223131339"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221223131339"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221223131339"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221223131339"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221223131339"></script>
-<script src="js/app.min.js?_v=20221223131339"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20230120201957"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20230120201957"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20230120201957"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20230120201957"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20230120201957"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20230120201957"></script>
+<script src="js/app.min.js?_v=20230120201957"></script>
 
 
 
