--- a/src/site/templates/contacts/contacts.htm
+++ b/src/site/templates/contacts/contacts.htm
@@ -46,5 +46,16 @@
                     <div class="contacts__map" id="map"></div>
                 </div>
             </div>
+            <section class="page__logistics logistics">
+                <div class="logistics__container">
+                    <h2 class="logistics__title title-xxl" data-animation>
+                        Логистическая сеть
+                    </h2>
+                    <div class="logistics__items">
+                        {{LIST}}
+                    </div>
+                    <div class="logistics__map" id="logistics-map" data-animation></div>
+                </div>
+            </section>
             {{FORM}}
             
