--- a/layout/team.html
+++ b/layout/team.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221215144505">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221215144505">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221215144505">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230120201957">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20230120201957">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230120201957">
 
 
 </head>
@@ -119,6 +119,11 @@
                             <li class="submenu__item">
                                 <a href="/reviews.html" class="submenu__link">
                                     Отзывы
+                                </a>
+                            </li>
+                            <li class="submenu__item">
+                                <a href="/media.html" class="submenu__link">
+                                    Медиагалерея
                                 </a>
                             </li>
                         </ul>
@@ -454,16 +459,16 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221215144505"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230120201957"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20230120201957"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221215144505"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221215144505"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221215144505"></script>
-<script src="js/app.min.js?_v=20221215144505"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20230120201957"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20230120201957"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20230120201957"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20230120201957"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20230120201957"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20230120201957"></script>
+<script src="js/app.min.js?_v=20230120201957"></script>
 
 </body>
 
